add tests to check-function